avanzo con rutas y controladores

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "argon2": "^0.43.1",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.5",
+    "mongoose": "^8.16.5"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
